feat: OGPメタタグとTwitter Cardメタタグを追加 #2
- SNSでのシェア時の表示を改善するためのメタタグを追加
- OGPメタタグ（og:title, og:description, og:image, og:url, og:type, og:site_name）
- Twitter Cardメタタグ（twitter:card, twitter:title, twitter:description, twitter:image）
- 基本的なdescriptionメタタグも追加

関連issue: #2

--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>suu3のプロフィール</title>
+        <meta name="description" content="suu3のポートフォリオサイト。スキル、プロジェクト、経歴を紹介しています。" />
+        
+        <!-- OGP メタタグ -->
+        <meta property="og:title" content="suu3のプロフィール" />
+        <meta property="og:description" content="suu3のポートフォリオサイト。スキル、プロジェクト、経歴を紹介しています。" />
+        <meta property="og:image" content="/vite.svg" />
+        <meta property="og:url" content="https://suu3play.github.io/portfolio/" />
+        <meta property="og:type" content="website" />
+        <meta property="og:site_name" content="suu3のプロフィール" />
+        
+        <!-- Twitter Card メタタグ -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="suu3のプロフィール" />
+        <meta name="twitter:description" content="suu3のポートフォリオサイト。スキル、プロジェクト、経歴を紹介しています。" />
+        <meta name="twitter:image" content="/vite.svg" />
         <link
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
             rel="stylesheet"
