feat: JSON-LD構造化データの実装 #3

--- a/index.html
+++ b/index.html
@@ -20,6 +20,65 @@
         <meta name="twitter:title" content="suu3のプロフィール" />
         <meta name="twitter:description" content="suu3のポートフォリオサイト。スキル、プロジェクト、経歴を紹介しています。" />
         <meta name="twitter:image" content="/vite.svg" />
+        
+        <!-- JSON-LD 構造化データ -->
+        <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "Person",
+            "name": "suu3",
+            "email": "bstale11@gmail.com",
+            "telephone": "+81 90 1234 5678",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "群馬",
+                "addressCountry": "日本"
+            },
+            "jobTitle": "ソフトウェアエンジニア・業務効率化コンサルタント",
+            "description": "業務効率化と現場課題の解決に特化したエンジニア。C#デスクトップアプリからWebシステムへの移行、API連携による電子帳簿保存法対応、Power Automateを活用した業務自動化など、実務に直結するソリューションを提供。",
+            "url": "https://suu3play.github.io/portfolio/",
+            "sameAs": [
+                "https://github.com/suu3play",
+                "https://qiita.com/suu3play",
+                "https://twitter.com/@suu3play"
+            ],
+            "knowsAbout": [
+                "C#",
+                ".NET 8",
+                "React",
+                "TypeScript",
+                "業務自動化",
+                "Power Automate",
+                "Python",
+                "SQL Server",
+                "Oracle",
+                "PostgreSQL",
+                "WPF",
+                "HTML",
+                "CSS",
+                "JavaScript",
+                "TailwindCSS"
+            ]
+        }
+        </script>
+        <script type="application/ld+json">
+        {
+            "@context": "http://schema.org",
+            "@type": "WebSite",
+            "name": "suu3のプロフィール",
+            "url": "https://suu3play.github.io/portfolio/",
+            "description": "suu3のポートフォリオサイト。スキル、プロジェクト、経歴を紹介しています。",
+            "author": {
+                "@type": "Person",
+                "name": "suu3"
+            },
+            "potentialAction": {
+                "@type": "SearchAction",
+                "target": "https://suu3play.github.io/portfolio/#search?q={search_term_string}",
+                "query-input": "required name=search_term_string"
+            }
+        }
+        </script>
         <link
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
             rel="stylesheet"
